RESOLVED FIXED172170
WebItemProviderPasteboard should be robust when temporary files are missing path extensions
https://bugs.webkit.org/show_bug.cgi?id=172170
Summary WebItemProviderPasteboard should be robust when temporary files are missing p...
Wenson Hsieh
Reported 2017-05-16 08:59:48 PDT
WebItemProviderPasteboard should be robust when temporary files are missing path extensions
Attachments
Patch (4.10 KB, patch)
2017-05-16 09:07 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-05-16 09:07:06 PDT
Tim Horton
Comment 2 2017-05-16 10:19:12 PDT
Comment on attachment 310265 [details] Patch Wut, requiring an extension is bizarre regardless of the mechanism.
Wenson Hsieh
Comment 3 2017-05-16 10:23:42 PDT
Comment on attachment 310265 [details] Patch Thanks Tim!
WebKit Commit Bot
Comment 4 2017-05-16 10:53:01 PDT
Comment on attachment 310265 [details] Patch Clearing flags on attachment: 310265 Committed r216936: <http://trac.webkit.org/changeset/216936>
WebKit Commit Bot
Comment 5 2017-05-16 10:53:02 PDT
All reviewed patches have been landed. Closing bug.
Wenson Hsieh
Comment 6 2017-05-18 12:40:51 PDT
Note You need to log in before you can comment on or make changes to this bug.