WebItemProviderPasteboard should be robust when temporary files are missing path extensions https://bugs.webkit.org/show_bug.cgi?id=172170

Reviewed by Tim Horton.

Makes a slight adjustment to the temporary file URLs are handled when using WebItemProviderPasteboard to load
data off of item providers. Previously, we would bail early and not load any data if the temporary URL is
missing an extension. Since the switch to NSItemProviders from UIItemProviders, some types of temporary files
generated by item providers are missing extensions, so this extra check is meaningless.

Covered by existing data interaction unit tests.

* platform/ios/WebItemProviderPasteboard.mm:
(temporaryFileURLForDataInteractionContent):
(-[WebItemProviderPasteboard doAfterLoadingProvidedContentIntoFileURLs:synchronousTimeout:]):


Canonical link: https://commits.webkit.org/189106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216936 268f45cc-cd09-0410-ab3c-d52691b4dbfc